add hero section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
             </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <h1 class="hero-title">Крупнейшая коллекция природных артефактов</h1>
+            <p class="hero-text">
+                Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий
+                пример европейского типа политической и социальной культуры.
+            </p>
+            <a href="#!" class="hero-link">
+                <span class="link-text">Исследовать</span>  
+                <img src="img/icons/arrow-right.svg" alt="arrow-icon" class="link-icon">
+            </a>
+        </div>
+    </section>
 </body>
 
 </html>
