add section news

--- a/index.html
+++ b/index.html
@@ -49,10 +49,53 @@
                 Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий
                 пример европейского типа политической и социальной культуры.
             </p>
-            <a href="#!" class="hero-link">
-                <span class="link-text">Исследовать</span>  
-                <img src="img/icons/arrow-right.svg" alt="arrow-icon" class="link-icon">
+            <a href="#!" class="learn-more-link">
+                <span class="link__text">Исследовать</span>
+                <img src="img/icons/arrow-right.svg" alt="arrow-icon" class="link__icon">
             </a>
+        </div>
+    </section>
+    <section class="news">
+        <div class="container">
+            <h2 class="news-title">Новые артефакты</h2>
+            <div class="news-row">
+                <div class="news-samples">
+                    <div class="img-number number-moss-small"  data-number="4.2">
+                        <img src="img/moss2.png" alt="moss2" class="news-samples-img--moss-small">
+                    </div>
+                    <div class="img-number number-moss"  data-number="7.2">
+                        <img src="img/moss.png" alt="moss" class="news-samples-img--moss">
+                    </div>
+                    <div class="img-number number-stick"  data-number="2.7">
+                        <img src="img/stick.png" alt="stick" class="news-samples-img--stick">
+                    </div>
+                    <div class="img-number number-flower"  data-number="5.1">
+                        <img src="img/flower3.png" alt="flower" class="news-samples-img--flower">
+                    </div>
+                    <div class="img-number number-polypody"  data-number="9.1">
+                        <img src="img/polypody.png" alt="polypody" class="news-samples-img--polypody">
+                    </div>
+                    <div class="img-number number-bark"  data-number="1.7">
+                        <img src="img/bark.png" alt="bark" class="news-samples-img--bark">
+                    </div>
+                    <div class="img-number number-flower-closed"  data-number="2.3">
+                        <img src="img/flower2.png" alt="flower" class="news-samples-img--flower-closed">
+                    </div>
+                </div>
+                <div class="news-side">
+                    <h3 class="news-side__title">Kurische Nehrung 24</h3>
+                    <p class="news-side__text">Вот вам яркий пример современных тенденций - начало повседневной работы
+                        по
+                        формированию позиции выявляет срочную потребность методов управления процессами.<br><br>
+                        Есть над чем задуматься: представители современных социальных резервов своевременно
+                        верифицированы.
+                    </p>
+                    <a href="#!" class="learn-more-link">
+                        <span class="link__text">Читать далее</span>
+                        <img src="img/icons/arrow-right2.svg" alt="arrow-icon" class="link__icon">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
