add help us section

--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
             <h2 class="news-title">Новые артефакты</h2>
             <div class="news-row">
                 <div class="news-samples">
-                    <div class="img-number number-moss-small"  data-number="4.2">
+                    <div class="img-number number-moss-small" data-number="4.2">
                         <img src="img/moss2.png" alt="moss2" class="news-samples-img--moss-small">
                     </div>
-                    <div class="img-number number-moss"  data-number="7.2">
+                    <div class="img-number number-moss" data-number="7.2">
                         <img src="img/moss.png" alt="moss" class="news-samples-img--moss">
                     </div>
-                    <div class="img-number number-stick"  data-number="2.7">
+                    <div class="img-number number-stick" data-number="2.7">
                         <img src="img/stick.png" alt="stick" class="news-samples-img--stick">
                     </div>
-                    <div class="img-number number-flower"  data-number="5.1">
+                    <div class="img-number number-flower" data-number="5.1">
                         <img src="img/flower3.png" alt="flower" class="news-samples-img--flower">
                     </div>
-                    <div class="img-number number-polypody"  data-number="9.1">
+                    <div class="img-number number-polypody" data-number="9.1">
                         <img src="img/polypody.png" alt="polypody" class="news-samples-img--polypody">
                     </div>
-                    <div class="img-number number-bark"  data-number="1.7">
+                    <div class="img-number number-bark" data-number="1.7">
                         <img src="img/bark.png" alt="bark" class="news-samples-img--bark">
                     </div>
-                    <div class="img-number number-flower-closed"  data-number="2.3">
+                    <div class="img-number number-flower-closed" data-number="2.3">
                         <img src="img/flower2.png" alt="flower" class="news-samples-img--flower-closed">
                     </div>
                 </div>
@@ -96,6 +96,20 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="help-us">
+        <div class="container">
+            <h2 class="help-us-title">Помочь проекту</h2>
+            <p class="help-us-text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
+                кроме
+                определения прогресса профессионального сообщества. Как принято считать, элементы политического процесса
+                рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. </p>
+            <form action="" class="help-us-form">
+                <input type="text" class="input-name" placeholder="Имя">
+                <input type="text" class="input-email" placeholder="Email">
+                <button class="input-button">Отправить</button>
+            </form>
         </div>
     </section>
 </body>
