--- a/index.html
+++ b/index.html
@@ -112,6 +112,31 @@
             </form>
         </div>
     </section>
+    <footer class="footer">
+        <ul class="social-list">
+            <li>
+                <a href="#!" class="social-list__link">
+                    <img src="img/icons/social-youtube.svg" alt="youtube" class="social-list__img">
+                </a>
+            </li>
+            <li>
+                <a href="#!" class="social-list__link">
+                    <img src="img/icons/social-instagram.svg" alt="instagram" class="social-list__img">
+                </a>
+            </li>
+            <li>
+                <a href="#!" class="social-list__link">
+                    <img src="img/icons/social-facebook.svg" alt="facebook" class="social-list__img">
+                </a>
+            </li>
+            <li>
+                <a href="#!" class="social-list__link">
+                    <img src="img/icons/social-twitter.svg" alt="twitter" class="social-list__img">
+                </a>
+            </li>
+        </ul>
+        <p class="copyright">f&b ® 2020</p>
+    </footer>
 </body>
 
 </html>
