fix html layout | fix class names | separate less stylesheet

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="header">
         <div class="container">
             <div class="nav">
-                <div class="header-wrapper">
-                    <a href="#!" class="header-logo-link">
-                        <img src="img/icons/logo.svg" alt="logo" class="header-logo-img">
+                <div class="nav-row">
+                    <a href="#!" class="nav__logo-link">
+                        <img src="img/icons/logo.svg" alt="logo" class="nav__logo-img">
                     </a>
                     <ul class="nav-menu">
                         <li class="nav-menu__item">
@@ -31,7 +31,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="header-buttons">
+                <div class="nav__buttons">
                     <button type="submit" class="search">
                         <svg class="link__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M13 19C8.58172 19 5 15.4183 5 11C5 6.58172 8.58172 3 13 3C17.4183 3 21 6.58172 21 11C21 15.4183 17.4183 19 13 19Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -51,8 +51,8 @@
     </header>
     <section class="hero">
         <div class="container">
-            <h1 class="hero-title">Крупнейшая коллекция природных артефактов</h1>
-            <p class="hero-text">
+            <h1 class="hero__title">Крупнейшая коллекция природных артефактов</h1>
+            <p class="hero__text">
                 Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий
                 пример европейского типа политической и социальной культуры.
             </p>
@@ -66,34 +66,34 @@
     </section>
     <section class="news">
         <div class="container">
-            <h2 class="news-title">Новые артефакты</h2>
+            <h2 class="news__title">Новые артефакты</h2>
             <div class="news-row">
-                <div class="news-samples">
+                <div class="samples">
                     <div class="img-number number-moss-small" data-number="4.2">
-                        <img src="img/moss2.png" alt="moss2" class="news-samples-img--moss-small">
+                        <img src="img/moss2.png" alt="moss2" class="samples__img--moss-small">
                     </div>
                     <div class="img-number number-moss" data-number="7.2">
-                        <img src="img/moss.png" alt="moss" class="news-samples-img--moss">
+                        <img src="img/moss.png" alt="moss" class="samples__img--moss">
                     </div>
                     <div class="img-number number-stick" data-number="2.7">
-                        <img src="img/stick.png" alt="stick" class="news-samples-img--stick">
+                        <img src="img/stick.png" alt="stick" class="samples__img--stick">
                     </div>
                     <div class="img-number number-flower" data-number="5.1">
-                        <img src="img/flower3.png" alt="flower" class="news-samples-img--flower">
+                        <img src="img/flower3.png" alt="flower" class="samples__img--flower">
                     </div>
                     <div class="img-number number-polypody" data-number="9.1">
-                        <img src="img/polypody.png" alt="polypody" class="news-samples-img--polypody">
+                        <img src="img/polypody.png" alt="polypody" class="samples__img--polypody">
                     </div>
                     <div class="img-number number-bark" data-number="1.7">
-                        <img src="img/bark.png" alt="bark" class="news-samples-img--bark">
+                        <img src="img/bark.png" alt="bark" class="samples__img--bark">
                     </div>
                     <div class="img-number number-flower-closed" data-number="2.3">
-                        <img src="img/flower2.png" alt="flower" class="news-samples-img--flower-closed">
+                        <img src="img/flower2.png" alt="flower" class="samples__img--flower-closed">
                     </div>
                 </div>
-                <div class="news-side">
-                    <h3 class="news-side__title">Kurische Nehrung 24</h3>
-                    <p class="news-side__text">Вот вам яркий пример современных тенденций - начало повседневной работы
+                <div class="side">
+                    <h3 class="side__title">Kurische Nehrung 24</h3>
+                    <p class="side__text">Вот вам яркий пример современных тенденций - начало повседневной работы
                         по
                         формированию позиции выявляет срочную потребность методов управления процессами.<br><br>
                         Есть над чем задуматься: представители современных социальных резервов своевременно
@@ -111,12 +111,12 @@
     </section>
     <section class="help-us">
         <div class="container">
-            <h2 class="help-us-title">Помочь проекту</h2>
-            <p class="help-us-text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
+            <h2 class="help-us__title">Помочь проекту</h2>
+            <p class="help-us__text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
                 кроме
                 определения прогресса профессионального сообщества. Как принято считать, элементы политического процесса
                 рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. </p>
-            <form action="" class="help-us-form">
+            <form action="" class="form">
                 <input type="text" class="input-name" placeholder="Имя">
                 <input type="text" class="input-email" placeholder="Email">
                 <button class="input-button">Отправить</button>
