--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/plant.png" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -100,7 +100,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/flower.png" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -114,7 +114,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/leaf.png" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -128,7 +128,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/wood.png" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -142,7 +142,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/plant.png" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -156,7 +156,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/flower.png" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -170,7 +170,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/leaf.png" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -184,7 +184,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/wood.png" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -198,7 +198,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
-                                        <img src="img/plant.png" alt="plant" class="card__img">
+                                        <img src="img/swiper/plant.png" srcset="img/swiper/plant@2x.png 2x" alt="plant" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -212,7 +212,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="3.1" class="img-number number-plant">
-                                        <img src="img/flower.png" alt="flower" class="card__img">
+                                        <img src="img/swiper/flower.png" srcset="img/swiper/flower@2x.png 2x" alt="flower" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -226,7 +226,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.2" class="img-number number-plant">
-                                        <img src="img/leaf.png" alt="leaf" class="card__img">
+                                        <img src="img/swiper/leaf.png" srcset="img/swiper/leaf@2x.png 2x" alt="leaf" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -240,7 +240,7 @@
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="1.4" class="img-number number-plant">
-                                        <img src="img/wood.png" alt="wood" class="card__img">
+                                        <img src="img/swiper/wood.png" srcset="img/swiper/wood@2x.png 2x" alt="wood" class="card__img">
                                     </div>
                                 </div>
                                 <div class="card__desc">
@@ -278,31 +278,31 @@
             </div>
         </div>
     </section>
-    <section class="news">
+    <section class="about">
         <div class="container">
-            <h2 class="news__title">Новые артефакты</h2>
-            <div class="news-row">
+            <h2 class="about__title">Новые артефакты</h2>
+            <div class="about-row">
                 <div class="samples">
                     <div class="img-number number-moss-small" data-number="4.2">
-                        <img src="img/moss2.png" alt="moss2" class="samples__img--moss-small">
+                        <img src="img/about/moss2.png" srcset="img/about/moss2@2x.png 2x" alt="moss2" class="samples__img--moss-small">
                     </div>
                     <div class="img-number number-moss" data-number="7.2">
-                        <img src="img/moss.png" alt="moss" class="samples__img--moss">
+                        <img src="img/about/moss.png" srcset="img/about/moss@2x.png 2x" alt="moss" class="samples__img--moss">
                     </div>
                     <div class="img-number number-stick" data-number="2.7">
-                        <img src="img/stick.png" alt="stick" class="samples__img--stick">
+                        <img src="img/about/stick.png" srcset="img/about/stick@2x.png 2x" alt="stick" class="samples__img--stick">
                     </div>
                     <div class="img-number number-flower" data-number="5.1">
-                        <img src="img/flower3.png" alt="flower" class="samples__img--flower">
+                        <img src="img/about/flower3.png" srcset="img/about/flower3@2x.png 2x" alt="flower" class="samples__img--flower">
                     </div>
                     <div class="img-number number-polypody" data-number="9.1">
-                        <img src="img/polypody.png" alt="polypody" class="samples__img--polypody">
+                        <img src="img/about/polypody.png" srcset="img/about/polypody@2x.png 2x" alt="polypody" class="samples__img--polypody">
                     </div>
                     <div class="img-number number-bark" data-number="1.7">
-                        <img src="img/bark.png" alt="bark" class="samples__img--bark">
+                        <img src="img/about/bark.png" srcset="img/about/bark@2x.png 2x" alt="bark" class="samples__img--bark">
                     </div>
                     <div class="img-number number-flower-closed" data-number="2.3">
-                        <img src="img/flower2.png" alt="flower" class="samples__img--flower-closed">
+                        <img src="img/about/flower2.png" srcset="img/about/flower2@2x.png 2x" alt="flower" class="samples__img--flower-closed">
                     </div>
                 </div>
                 <div class="side">
