--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий
                 пример европейского типа политической и социальной культуры.
             </p>
-            <a href="#!" class="learn-more-link">
+            <a href="#!" class="learn-more-link" disabled>
                 <span class="link__text">Исследовать</span>
                 <svg class="link__icon" width="44" height="15" viewBox="0 0 44 15" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +139,6 @@
                                 </div>
                             </article>
 
-
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
@@ -196,7 +195,6 @@
                                 </div>
                             </article>
 
-
                             <article class="card swiper-slide">
                                 <div class="card__photo">
                                     <div data-number="2.4" class="img-number number-plant">
@@ -252,7 +250,6 @@
                                     <button class="card__btn">Подробнее</button>
                                 </div>
                             </article>
-                           
 
                         </div>
 
