add adaptive header | add adaptive hero section | add adaptive gallery section

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>F&B</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
 </head>
 
 <body>
-    <header class="header">
+    <header class="header none">
         <div class="container">
             <div class="nav">
                 <div class="nav-row">
@@ -59,7 +60,7 @@
             </div>
         </div>
     </header>
-    <section class="hero">
+    <section class="hero none">
         <div class="container">
             <h1 class="hero__title">Крупнейшая коллекция природных артефактов</h1>
             <p class="hero__text">
@@ -274,12 +275,15 @@
                                 </svg>
                             </button>
                         </div>
+
+                        
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about none">
         <div class="container">
             <h2 class="about__title">Новые артефакты</h2>
             <div class="about-row">
@@ -327,7 +331,7 @@
             </div>
         </div>
     </section>
-    <section class="help-us">
+    <section class="help-us none">
         <div class="container">
             <h2 class="help-us__title">Помочь проекту</h2>
             <p class="help-us__text">Равным образом, экономическая повестка сегодняшнего дня не даёт нам иного выбора,
@@ -341,7 +345,7 @@
             </form>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer none">
         <ul class="social-list">
             <li>
                 <a href="#!" class="social-list__link">
@@ -390,6 +394,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
+
 </body>
 
 </html>
